build(project): 添加 Gradle Wrapper 并优化文档和文件处理
- 将 Gradle Wrapper 相关文件（gradlew, gradlew.bat, gradle/wrapper/*）加入版本控制，允许项目无需本地安装 Gradle 即可构建
- 新增 gradle.properties 配置 JDK 路径和 UTF-8 编码
- 更新 .gitignore，移除对 Gradle 相关文件的忽略规则
- 重写 README.md，补充详细的功能特性、安装配置、使用说明、提示词模板、API 兼容性、本地构建步骤、项目结构、隐私安全、常见问题及贡献指南
- 改进生成提交信息时的文件处理逻辑，对大文件（\u003e1MiB）和二进制文件使用占位标记，避免提示词过大或解码异常